<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_store_add_item"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="16dp"
    android:layout_marginTop="15dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="app.smarttrolley.appforyou.smarttrolley.StoreAddItem"
    tools:showIn="@layout/activity_store_add_item">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Add More Items"
        android:textColor="@color/red"
        android:textAlignment="center"
        android:textStyle="bold|italic"
        android:textSize="25sp"
        android:layout_marginBottom="6dp"
        />
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/productid_hint"
            android:inputType="text"
            android:id="@+id/storeAddItem_productId_edittext"
            android:maxLines="1"

            android:editable="false"
            android:onClick="openQRScanner"


            />
    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/productname_hint"
            android:inputType="text"
            android:id="@+id/storeAddItem_productname_edittext"
            android:maxLines="1"

            />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/productprice_hint"
            android:inputType="number"
            android:id="@+id/storeAddItem_productprice_edittext"
            android:maxLines="1"

            />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/productweight_hint"
            android:inputType="number"

            android:id="@+id/storeAddItem_productweight_edittext"
            android:maxLines="1"

            />



    </android.support.design.widget.TextInputLayout>



    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/productbrand_hint"
            android:inputType="text"
            android:id="@+id/storeAddItem_productbrand_edittext"
            android:maxLines="1"

            />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/productcategory_hint"
            android:inputType="text"
            android:id="@+id/storeAddItem_productcategory_edittext"
            android:maxLines="1"

            />
    </android.support.design.widget.TextInputLayout>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

    </android.support.v7.widget.CardView>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/storeaddItem_addButton_hint"
        android:textColor="@color/white"
        android:background="@color/red"
        android:onClick="addItemToStoreListing"
        />


</LinearLayout>
